Wrote and formatted HTML content, added basic CSS styling, added photos, and saved .PNG screenshot files to the repository.

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -8,11 +8,16 @@
     <script src="javascript.js"></script>
 </head>
 <body>
-    <h1> Melissa Chin</h1>
+    
+    <h1>MELISSA CHIN</h1>
     <nav>
         <a href="homepage.html">Home</a>
-        <a href="portfolio.html">Portfolio</a>
+        <div class="nav-divider"></div>
+        <a href="portfolio.html">My Work</a>
     </nav>
     <h2> About Me</h2>
+    <p>As an artist, I place equal amounts of emphasis on the visual and functional components of programming. Being a software developer is similar to being an artist in that it allows me to stretch my creative limits by building things and making them beautiful. What I love about programming is that the things that I create help to solve people's problems and make their lives easier everyday. </p>
+
+    <p> When I'm not programming, I love to cook, go for long walks, listen to podcasts, and read. I'm always looking to add more cozy hobbies to my repertoire, so if you have any recommendations, please let me know! </p>
 </body>
 </html>
