--- a/portfolio.html
+++ b/portfolio.html
@@ -3,16 +3,54 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>My Work</title>
     <link rel="stylesheet" href="stylesheet.css"/>
     <script src="javascript.js"></script>
 </head>
 <body>
-    <h1> Melissa Chin</h1>
+    <h1>MELISSA CHIN</h1>
     <nav>
         <a href="homepage.html">Home</a>
+        <div class="nav-divider"></div>
         <a href="aboutpage.html">About Me</a>
     </nav>
     <h2>My Work</h2>
+    
+    <p class="portfolio-intro">Below are examples of the work that I have done for some of my favorite clients.</p>
+    <br/>
+
+   
+    <section> 
+    <img src="gallerypic.PNG" class="gallery-image"/>
+    <div>
+        <h3>Melissa Chin Gallery - Custom Landing Page</h3>
+        <p> Melissa Chin Gallery requested custom art work, as well as a form to gather customer names and email addresses. I created this custom work of modern art using a combination of HTML and CSS. </p> 
+        <br/>
+        <p>You can learn more about this project <a href="https://en.wikipedia.org/wiki/Art" target="_blank">here.</a></p>
+    </div>
+    </section>
+    
+    <section>
+    <div>
+        <h3> Melissa Chin Zoo - Animal Info Page</h3>
+        <p>Melissa Chin Zoo requested a page that introduced their animals to new customers. I spent a week at the zoo getting to know the animals so that I could write bios that captured their unique personalities. I also took the photos! </p>
+
+        <br/>
+        <p>You can learn more about this project <a href="https://en.wikipedia.org/wiki/Zoo" target="_blank">here.</a></p>
+    </div>
+    <img src="zoopic.PNG" class="zoo-image"/>
+
+    </section>
+
+    <section>
+   
+    <img src="grocerypic.PNG" class="grocery-image"/>
+    <div>
+        <h3> Melissa Chin Grocery Services - Grocery List Design</h3>
+        <p>Melissa Chin Grocery Sevices came to me looking for a new design layout for their grocery list app. My design allows customers to create their grocery lists in an environment that is colorful and fun. Say goodbye to the days of using a boring pencil and paper!</p>
+        <br/>
+        <p>You can learn more about this project <a href="https://en.wikipedia.org/wiki/Grocery_store" target="_blank">here.</a></p>
+    </div>
+    </section>
 </body>
 </html>
