Added contact page and updated nav bar

--- a/aboutpage.html
+++ b/aboutpage.html
@@ -13,7 +13,11 @@
     <nav>
         <a href="homepage.html">Home</a>
         <div class="nav-divider"></div>
+        <a href="aboutpage.html">About Me</a>
+        <div class="nav-divider"></div>
         <a href="portfolio.html">My Work</a>
+        <div class="nav-divider"></div>
+        <a href="contact.html">Contact</a>
     </nav>
     <h2> About Me</h2>
     <p>As an artist, I place equal amounts of emphasis on the visual and functional components of programming. Being a software developer is similar to being an artist in that it allows me to stretch my creative limits by building things and making them beautiful. What I love about programming is that the things that I create help to solve people's problems and make their lives easier everyday. </p>
