--- a/portfolio.html
+++ b/portfolio.html
@@ -13,6 +13,10 @@
         <a href="homepage.html">Home</a>
         <div class="nav-divider"></div>
         <a href="aboutpage.html">About Me</a>
+        <div class="nav-divider"></div>
+        <a href="portfolio.html">My Work</a>
+        <div class="nav-divider"></div>
+        <a href="contact.html">Contact</a>
     </nav>
     <h2>My Work</h2>
     
