--- a/homepage.html
+++ b/homepage.html
@@ -11,12 +11,16 @@
     
     <h1>MELISSA CHIN</h1>
     <nav>
+        <a href="homepage.html">Home</a>
+        <div class="nav-divider"></div>
         <a href="aboutpage.html">About Me</a>
         <div class="nav-divider"></div>
         <a href="portfolio.html">My Work</a>
+        <div class="nav-divider"></div>
+        <a href="contact.html">Contact</a>
     </nav>
     <h2>Hello! I'm Melissa.</h2>
     <img src="https://media.licdn.com/dms/image/D5603AQHL1yQ_UE3lJw/profile-displayphoto-shrink_200_200/0/1680215796289?e=2147483647&v=beta&t=QQAn1Ptld27ZzN5Mamq3jSFt3_6SSjkc5P6PpE2ru3Y" class="homepage-image"/>
-    <p>Thank you for visiting my website! My name is Melissa and I'm a Software Developer based in Chicago, IL. As a programmer with a background in the arts, I have a passion for combining the creative and the analytical. I look forward to helping you learn more about me and my work.</p>
+    <p>Thank you for visiting my website! My name is Melissa and I'm a Software Developer based in Chicago, IL. As a programmer with a background in the arts, I have a passion for combining the creative and the analytical. I look forward to working with you.</p>
 </body>
 </html>
