Added content to contact and thank you pages, added photo files, finalized content on html pages, updated README and added additional CSS styling.

--- a/homepage.html
+++ b/homepage.html
@@ -10,6 +10,7 @@
 <body>
     
     <h1>MELISSA CHIN</h1>
+    
     <nav>
         <a href="homepage.html">Home</a>
         <div class="nav-divider"></div>
@@ -19,8 +20,10 @@
         <div class="nav-divider"></div>
         <a href="contact.html">Contact</a>
     </nav>
+    <br/><br/>
+
     <h2>Hello! I'm Melissa.</h2>
-    <img src="https://media.licdn.com/dms/image/D5603AQHL1yQ_UE3lJw/profile-displayphoto-shrink_200_200/0/1680215796289?e=2147483647&v=beta&t=QQAn1Ptld27ZzN5Mamq3jSFt3_6SSjkc5P6PpE2ru3Y" class="homepage-image"/>
+    <img src="headshot.PNG" class="homepage-image"/>
     <p>Thank you for visiting my website! My name is Melissa and I'm a Software Developer based in Chicago, IL. As a programmer with a background in the arts, I have a passion for combining the creative and the analytical. I look forward to working with you.</p>
 </body>
 </html>
