--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,7 @@
 </head>
 <body>
     <h1>MELISSA CHIN</h1>
+    <br/>
     <nav>
         <a href="homepage.html">Home</a>
         <div class="nav-divider"></div>
@@ -21,7 +22,7 @@
     <h2>My Work</h2>
     
     <p class="portfolio-intro">Below are examples of the work that I have done for some of my favorite clients.</p>
-    <br/>
+    <br/> <br/>  <br/>
 
    
     <section> 
@@ -33,10 +34,10 @@
         <p>You can learn more about this project <a href="https://en.wikipedia.org/wiki/Art" target="_blank">here.</a></p>
     </div>
     </section>
-    
+    <br/>
     <section>
     <div>
-        <h3> Melissa Chin Zoo - Animal Info Page</h3>
+        <h3> Melissa Chin Zoo - Animal Biography Page</h3>
         <p>Melissa Chin Zoo requested a page that introduced their animals to new customers. I spent a week at the zoo getting to know the animals so that I could write bios that captured their unique personalities. I also took the photos! </p>
 
         <br/>
@@ -45,7 +46,7 @@
     <img src="zoopic.PNG" class="zoo-image"/>
 
     </section>
-
+    <br/>
     <section>
    
     <img src="grocerypic.PNG" class="grocery-image"/>
