--- a/aboutpage.html
+++ b/aboutpage.html
@@ -10,6 +10,8 @@
 <body>
     
     <h1>MELISSA CHIN</h1>
+
+    <br/>
     <nav>
         <a href="homepage.html">Home</a>
         <div class="nav-divider"></div>
@@ -19,9 +21,17 @@
         <div class="nav-divider"></div>
         <a href="contact.html">Contact</a>
     </nav>
-    <h2> About Me</h2>
-    <p>As an artist, I place equal amounts of emphasis on the visual and functional components of programming. Being a software developer is similar to being an artist in that it allows me to stretch my creative limits by building things and making them beautiful. What I love about programming is that the things that I create help to solve people's problems and make their lives easier everyday. </p>
+    <br/><br/>
 
-    <p> When I'm not programming, I love to cook, go for long walks, listen to podcasts, and read. I'm always looking to add more cozy hobbies to my repertoire, so if you have any recommendations, please let me know! </p>
+    <h2> About Me</h2>
+    <img src="about-photo3.png" class="about-main-image"/> <br/>
+    <p>As an artist, I place equal amounts of emphasis on the visual and functional components of programming. Being a software developer is similar to being an artist in that it allows me to stretch my creative limits by building things and taking the time to make them beautiful. What I love about programming is that the things that I create help to solve people's problems and make their lives easier everyday. </p><br/>
+    <div class="hobby-photos">
+    <img src="about-photo4.png" class="cupcake-image"/>
+    <img src="about-photo2.png" class="vase-image"/> 
+    <img src="about-photo1.png" class="lighthouse-image"/>
+    </div>
+    
+    <p> When I'm not programming, I love to bake, take photos, and travel. I'm always looking to add more cozy hobbies to my repertoire, so if you have any recommendations, please let me know! </p>
 </body>
 </html>
