--- a/contact.html
+++ b/contact.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Contact</title>
     <link rel="stylesheet" href="stylesheet.css"/>
     <script src="javascript.js"></script>
 </head>
 <body>
     <h1>MELISSA CHIN</h1>
     <nav>
-        <a href="homepage.html"> Home </a>
+        <a href="homepage.html">Home</a>
         <div class="nav-divider"></div>
         <a href="aboutpage.html">About Me</a>
         <div class="nav-divider"></div>
@@ -18,6 +18,21 @@
         <div class="nav-divider"></div>
         <a href="contact.html">Contact</a>
     </nav>
-    
+    <h2>Contact Me</h2>
+    <p class="contact-page-text">I would love to stay in touch with you. Please fill out the form below, and I'll get back to you as soon as I can!</p>
+
+    <form action="thankyoupage.html" target="_blank">
+        <label for="firstname">First Name:</label>
+        <input type="text" name="firstname"/> <br/>
+        <label for="lastname"> Last Name:</label>
+        <input type="text" name="lastname"/><br/>
+        <label for="email"> Email:</label>
+        <input type="text" name="email"/><br/>
+        <p class="messagebox-heading">Message:</p>
+        <textarea name="message" class="message-box"></textarea><br/>
+
+        <input type="submit" value="Submit"/>
+        
+    </form>
 </body>
 </html>
